--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -79,3 +79,44 @@
     }
   }
 }
+
+/* Showcase */
+
+.showcase {
+  background: url('../img/showcase.jpg') no-repeat -100px 0;
+  color: $white;
+
+  .showcase-box {
+    padding: 20px 30px;
+    margin-top: 30px;
+    background: $primary;
+    color: #fff;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+
+    p {
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 10px;
+    }
+  }
+
+  .showcase-box-bottom {
+    background: $secondary;
+    padding: 10px 30px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+
+    .pricing span {
+      font-size: 35px;
+      font-weight: 700;
+    }
+
+    .start-link {
+      padding-top: 20px;
+
+      a {
+        color: $white;
+      }
+    }
+  }
+}
