--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -45,6 +45,7 @@
 
 $primary: #0f74a0;
 $secondary: #9bc33f;
+$extra: #fb9f33;
 
 // 1. Global
 // ---------
@@ -55,6 +56,7 @@ $global-lineheight: 1.5;
 $foundation-palette: (
   primary: $primary,
   secondary: $secondary,
+  extra: $extra,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
