--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -194,3 +194,39 @@
     color: $primary;
   }
 }
+
+/* Section A */
+
+.section-a {
+  margin-top: 30px;
+  padding: 50px 0;
+  background: $light-gray;
+}
+
+/* Section B */
+
+.section-b {
+  background: $dark-gray;
+  color: $white;
+  padding: 50px 0;
+  text-align: center;
+}
+
+/* Section C */
+
+.section-c {
+  background: $primary;
+  color: $white;
+  padding: 50px 0;
+  text-align: center;
+
+  .fa {
+    font-size: 90px;
+  }
+}
+
+/* Footer */
+
+footer {
+  padding: 40px 0;
+}
